hphp/hack/test/typecheck/nameof/parsing/nameof_expressiontree.php.exp
File "nameof_expressiontree.php", line 5, characters 12-25:
`nameof` can only be used with a class (Parsing[1002])
