hphp/hack/test/typecheck/nameof/parsing/nameof_expressiontree.php
<?hh

class C {
  public static function f(): void {
    nameof Foo`1 + bar()`;
  }
}
